[gd_scene load_steps=6 format=3 uid="uid://bbjpx66lfv1w4"]

[ext_resource type="PackedScene" uid="uid://p4rofa2rvjdl" path="res://characters/player/mother/model/madre.tscn" id="1_ffkcf"]
[ext_resource type="Script" path="res://characters/player/mother/mother.gd" id="1_l6ji8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cmeot"]
height = 1.8908

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnxra"]
height = 3.68062

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5ih22"]
height = 1.8908
radius = 3.00282

[node name="Mother" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_l6ji8")
speed = 6.5
jump_velocity = 13.0

[node name="Madre" parent="." instance=ExtResource("1_ffkcf")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="ActionArea" type="Area3D" parent="Madre"]
transform = Transform3D(-0.87462, 0, -0.48481, 0, 1, 0, 0.48481, 0, -0.87462, 0, 0, 0)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Madre/ActionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.724879, 1.62499, 1.48252)
shape = SubResource("CylinderShape3D_cmeot")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95801, -0.260859)
shape = SubResource("CapsuleShape3D_lnxra")

[node name="GroupArea" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroupArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.625, 0)
shape = SubResource("CylinderShape3D_5ih22")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="body_entered" from="Madre/ActionArea" to="." method="_on_action_area_body_entered"]
[connection signal="body_exited" from="Madre/ActionArea" to="." method="_on_action_area_body_exited"]
[connection signal="body_entered" from="GroupArea" to="." method="_on_group_area_body_entered"]
[connection signal="body_exited" from="GroupArea" to="." method="_on_group_area_body_exited"]
